src/test/deca/context/valid/custom/option/asm/asm2.deca
class TestAsm {
    void methodAsm() asm("  WSTR \"toto\"");

    void methodAsm2() asm("  WSTR \"abc\"");
}
{
    TestAsm test = new TestAsm();
    test.methodAsm();
    test.methodAsm2();
}